[chromium] Fix scaleDelta zoom-out visibility rect bug https://bugs.webkit.org/show_bug.cgi?id=72208

Since the scroll is no longer applied at the top layer of the layer
tree, the scaleDelta transformation needs to be moved down to the
same level.

Also fix zoomAnimator to be applied the same way.  I removed zoom
animator layout tests, as they aren't testing the actual impl-side
codepath, and are hard to continue supporting -- we should cover zoom
features with unit tests in the future.

Patch by Alexandre Elias <aelias@google.com> on 2011-11-14
Reviewed by James Robinson.

No new tests (planning to add later: https://bugs.webkit.org/show_bug.cgi?id=71529)

* platform/graphics/chromium/LayerChromium.h:
(WebCore::LayerChromium::scaleDelta):
* platform/graphics/chromium/LayerRendererChromium.cpp:
(WebCore::LayerRendererChromium::drawLayersInternal):
* platform/graphics/chromium/LayerRendererChromium.h:
* platform/graphics/chromium/cc/CCLayerImpl.cpp:
(WebCore::CCLayerImpl::CCLayerImpl):
(WebCore::CCLayerImpl::setScaleDelta):
* platform/graphics/chromium/cc/CCLayerImpl.h:
(WebCore::CCLayerImpl::scaleDelta):
* platform/graphics/chromium/cc/CCLayerTreeHostCommon.cpp:
(WebCore::calculateDrawTransformsAndVisibilityInternal):
* platform/graphics/chromium/cc/CCLayerTreeHostImpl.cpp:
(WebCore::CCLayerTreeHostImpl::setScaleDelta):
(WebCore::CCLayerTreeHostImpl::setZoomAnimatorTransform):

Canonical link: https://commits.webkit.org/88783@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100235 268f45cc-cd09-0410-ab3c-d52691b4dbfc