Source/WebCore/platform/graphics/chromium/LayerRendererChromium.cpp
@@ -368,14 +368,10 @@ void LayerRendererChromium::drawLayersInternal()
     m_defaultRenderSurface = rootDrawLayer->renderSurface();
     m_defaultRenderSurface->clearLayerList();
 
-    TransformationMatrix magnifyMatrix(m_pageMagnifyMatrix);
-    // TODO(aelias): These two transformations are redundant; unify zoomAnimator
-    // and impl-thread side matrix.
-    magnifyMatrix.multiply(m_zoomAnimatorTransform);
-
+    TransformationMatrix identityMatrix;
     {
         TRACE_EVENT("LayerRendererChromium::drawLayersInternal::calcDrawEtc", this, 0);
-        CCLayerTreeHostCommon::calculateDrawTransformsAndVisibility(rootDrawLayer, rootDrawLayer, magnifyMatrix, magnifyMatrix, renderSurfaceLayerList, m_defaultRenderSurface->layerList(), &m_layerSorter, m_capabilities.maxTextureSize);
+        CCLayerTreeHostCommon::calculateDrawTransformsAndVisibility(rootDrawLayer, rootDrawLayer, identityMatrix, identityMatrix, renderSurfaceLayerList, m_defaultRenderSurface->layerList(), &m_layerSorter, m_capabilities.maxTextureSize);
     }
 
     // The GL viewport covers the entire visible area, including the scrollbars.
@@ -391,13 +387,8 @@ void LayerRendererChromium::drawLayersInternal()
 
     useRenderSurface(m_defaultRenderSurface);
 
-    if (m_zoomAnimatorTransform.isIdentity())
-        // Clear to blue to make it easier to spot unrendered regions.
-        m_context->clearColor(0, 0, 1, 1);
-    else
-        // Clear to grey, as zoom animation may leave unrendered regions.
-        // FIXME(wjmaclean): Render some interesting texture in unrendered regions.
-        m_context->clearColor(0.25, 0.25, 0.25, 1);
+    // Clear to blue to make it easier to spot unrendered regions.
+    m_context->clearColor(0, 0, 1, 1);
     m_context->colorMask(true, true, true, true);
     m_context->clear(GraphicsContext3D::COLOR_BUFFER_BIT);
 
