Source/WebCore/platform/graphics/chromium/LayerRendererChromium.h
@@ -98,8 +98,6 @@ public:
 
     void viewportChanged();
 
-    void setPageMagnifyTransform(const TransformationMatrix& pageMagnifyMatrix) { m_pageMagnifyMatrix = pageMagnifyMatrix; }
-
     void drawLayers();
 
     // waits for rendering to finish
@@ -107,8 +105,6 @@ public:
 
     // puts backbuffer onscreen
     void swapBuffers();
-
-    void setZoomAnimatorTransform(const TransformationMatrix& t) { m_zoomAnimatorTransform = t; }
 
     static void debugGLCall(GraphicsContext3D*, const char* command, const char* file, int line);
 
@@ -197,11 +193,9 @@ private:
 
     TransformationMatrix m_projectionMatrix;
     TransformationMatrix m_windowMatrix;
-    TransformationMatrix m_pageMagnifyMatrix;
 
     CCRenderSurface* m_currentRenderSurface;
     unsigned m_offscreenFramebufferId;
-    TransformationMatrix m_zoomAnimatorTransform;
 
     // Store values that are shared between instances of each layer type
     // associated with this instance of the compositor. Since there can be
