Source/WebCore/platform/graphics/chromium/cc/CCLayerImpl.h
@@ -119,6 +119,9 @@ public:
     void setTransform(const TransformationMatrix&);
     const TransformationMatrix& transform() const { return m_transform; }
 
+    void setZoomAnimatorTransform(const TransformationMatrix&);
+    const TransformationMatrix& zoomAnimatorTransform() const { return m_zoomAnimatorTransform; }
+
     void setName(const String& name) { m_name = name; }
     const String& name() const { return m_name; }
 
@@ -156,6 +159,9 @@ public:
 
     const IntSize& scrollDelta() const { return m_scrollDelta; }
     void setScrollDelta(const IntSize&);
+
+    float scaleDelta() const { return m_scaleDelta; }
+    void setScaleDelta(float);
 
     void scrollBy(const IntSize& scroll);
 
@@ -233,6 +239,7 @@ private:
     float m_opacity;
     FloatPoint m_position;
     bool m_preserves3D;
+    TransformationMatrix m_zoomAnimatorTransform;
     TransformationMatrix m_sublayerTransform;
     TransformationMatrix m_transform;
     bool m_usesLayerClipping;
@@ -242,6 +249,7 @@ private:
 
     IntSize m_scrollDelta;
     IntSize m_maxScrollPosition;
+    float m_scaleDelta;
 
     // Properties owned exclusively by this CCLayerImpl.
     // Debugging.
